Changelog 1.4.6:
Removed duplicate caching from meta provider modules
Fixed typos
Additional translation strings added
Fixed potential deadlocks from occuring in the worker module
Reduced workers for Trakt Sync operations

Changelog 1.4.5:
Inceased speed in TMDb module by threading more network requests

Changelog 1.4.4:
Fixed accidental swap of preferred source of artwork labels
Duplicated poster value to thumb for show and season objects

Changelog 1.4.3:
Created Artwork Category in settings
Adjusted artwork settings visibility to better represent end format

Changelog 1.4.2:
Adjust Advanced artwork strings
Fixed Premiumize Max Storage setting visibility
Changing highlight color now re-opens settings menu
Adjusted getInfo to support more information tags

Changelog 1.4.1:
Created worker module and lazy threadpool
Increased title and information identification for sources
Added advanced settings for item artwork
Increased network request caching
Uninstall in provider manager now works similar to disabling providers
Threadlocked SQL database entries

Changelog 1.4.0:
Fixed Provider Manager Default Focus
Fixed language string spacing for Disable All Hosters
Fixed Notification timeouts for available updates
Added multiple fall backs for metadata information to better support outages
Fixed Premiumize visibility equations
Settings re-work for better flow
Added settings to allow user to choose artwork service
Fix setCast for items, cast items now display images
Updated last_meta_update for trakt sync database

Changelog 1.3.6:
Fix skin_dir XML pointer

Changelog 1.3.5:
Theme Manager now uses pointer to reduce file movements
Fixed Unicode errors on deaccentString method
Fixed SkinManager import for Provider Manager
Fixed type issues with tuples for view types

Changelog 1.3.4:
Fixed Cache Assist always triggering
Fixed cache clear notification appearing if user cancels process
Increased fall backs for TV show artwork