@@ -387,7 +387,7 @@ class Menus:
             return
         self.showListBuilder([show for show in trakt_list if float(show['score']) > 0])
         tools.closeAllDialogs()
-        tools.closeDirectory('tvshows', cache=False)
+        tools.closeDirectory('tvshows')
 
     def showsByActor(self, actionArgs):
         if actionArgs == None:
@@ -668,6 +668,7 @@ class Menus:
 
             self.itemList = [x for x in self.itemList if x is not None and 'info' in x]
             self.itemList = [i for i in self.itemList if 'info' in i and i['info'].get('premiered', None) is not None]
+            self.itemList = [i for i in self.itemList if 'info' in i and i['info'].get('premiered', '') is not '']
             if sort is None:
                 self.itemList = sorted(self.itemList,
                                        key=lambda i: tools.datetime_workaround(i['info']['premiered'],
